--- a/index.html
+++ b/index.html
@@ -5,15 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beau-Arts</title>
     <link rel="stylesheet" href="assets\style\css\main.min.css" />
+    <link rel="shortcut icon" href="assets\svg\logo.svg" type="image/x-icon" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    
   </head>
 
   <body>
-    <h1> Welcome!</h1>
+    <nav class="navbar navbar-expand-lg bg-primary position-relative z-3">
+      <div class="container py-4">
+        <a class="navbar-brand text-light" href="#home">
+          <img
+            src="assets\svg\logo.svg"
+            alt="logo"
+            class="img-fluid me-4"
+            width="40"
+          />
+        </a>
+        <button
+          class="navbar-toggler bg-warning rounded-5 border-none"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active text-ligt"
+                aria-current="page"
+                href="#home"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#gallery">Gallery</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-light"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                more
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#sponsorship">Sponsorship</a>
+                </li>
+                <li><a class="dropdown-item" href="#About us">About us</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#contact us">contact us</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2 rounded-5"
+              type="search"
+              placeholder="Find Art..."
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-warning rounded-5 px-4 py-2" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
